# piscan

./: .gitignore  LICENSE  README.md  pyproject.toml
piscan/: __init__.py  runner.py
piscan/attacks/: loader.py
piscan/attacks/payloads/: core.yaml
piscan/judge/: __init__.py  canary.py
piscan/report/: __init__.py  markdown.py
piscan/targets/: base.py  mock.py
tests/: test_runner.py
tests/attacks/: test_loader.py
tests/judge/: test_canary.py
tests/report/: test_markdown.py
tests/targets/: test_base.py  test_mock.py
