[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piscan"
version = "0.1.0"
description = "Prompt-injection robustness scanner for your own LLM apps"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ramon Tebbe" }]
keywords = ["llm", "security", "prompt-injection", "owasp", "red-teaming"]
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "ollama>=0.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["piscan*"]
